Potential fix for buttons getting stuck hover'd on iphone

--- a/Main-Website-Assets/css/header-footer-styles.css
+++ b/Main-Website-Assets/css/header-footer-styles.css
@@ -131,6 +131,17 @@ h1.title-text-style {
   cursor: pointer;
 }
 
+/* Touch devices need this workaround so that 
+they dont trigger the hover behavior on tap.
+This just reverts touch devices back to the 
+original value instead of the hover one */
+@media (hover: none) {
+  .header-button-container {
+    background-color: var(--button-color);
+    color: initial; /* Revert text color */
+  }
+}
+
 .header-button-text {
   color: var(--main-text-color);
   text-align: center;
@@ -221,6 +232,20 @@ h1.title-text-style {
   text-decoration: none; /* Remove the underline */
 }
 
+.footer-main-text a:hover {
+  text-decoration: underline; /* Add underline on hover */
+}
+
+/* Touch devices need this workaround so that 
+they dont trigger the hover behavior on tap.
+This just reverts touch devices back to the 
+original value instead of the hover one */
+@media (hover: none) {
+  .footer-main-text a {
+    text-decoration: none;
+  }
+}
+
 /* LinkedIn footer button styling */
 .linkedIn-button-container {
   width: var(--linkedin-button-width);
@@ -238,6 +263,17 @@ h1.title-text-style {
   background-color: var(--button-hover-color);
   color: var(--main-text-color);
   cursor: pointer;
+}
+
+/* Touch devices need this workaround so that 
+they dont trigger the hover behavior on tap.
+This just reverts touch devices back to the 
+original value instead of the hover one */
+@media (hover: none) {
+  .linkedIn-button-container {
+    background-color: var(--button-color);
+    color: initial; /* Revert text color */
+  }
 }
 
 .linkedIn-text {
