--- a/games/Flip-Tile-Game/css/flip-tile-styles.css
+++ b/games/Flip-Tile-Game/css/flip-tile-styles.css
@@ -98,6 +98,16 @@ a:hover {
   text-decoration: underline; /* Add underline on hover */
 }
 
+/* Touch devices need this workaround so that 
+they dont trigger the hover behavior on tap.
+This just reverts touch devices back to the 
+original value instead of the hover one */
+@media (hover: none) {
+  a {
+    text-decoration: none;
+  }
+}
+
 /* Buttons */
 .updateTilegrid-button-container {
   position: fixed;
@@ -127,6 +137,16 @@ a:hover {
 
 .fliptile-button:hover {
   transform: translate(-50%, 0%) scale(1.2);
+}
+
+/* Touch devices need this workaround so that 
+they dont trigger the hover behavior on tap.
+This just reverts touch devices back to the 
+original value instead of the hover one */
+@media (hover: none) {
+  .fliptile-button {
+    transform: translate(-50%, 0%);
+  }
 }
 
 .fliptile-icon-img,
@@ -317,4 +337,14 @@ input[type="checkbox" i] {
 
 .close-button:hover {
   transform: scale(2.2);
+}
+
+/* Touch devices need this workaround so that 
+they dont trigger the hover behavior on tap.
+This just reverts touch devices back to the 
+original value instead of the hover one */
+@media (hover: none) {
+  .close-button {
+    transform: scale(1.6);
+  }
 }
